testsuite/tests/misc/invalid_static_expr/invalid_syntax.lkt
import common

@repr_name(a <- b)
class FooNode implements Node[FooNode] {
}
